# crosside

./: .gitignore  Builder.py  README.md  config.json  crosside_cli.py  editor copy.py  editor.py  help  release_one_click.sh
Templates/Android/: AndroidManifest.java.xml  AndroidManifest.xml
builder/: Makefile  README.md
builder/docs/: creating_modules.md
builder/include/commands/: build_command.hpp  clean_command.hpp  list_command.hpp  module_command.hpp  serve_command.hpp
builder/include/io/: fs_utils.hpp  http_server.hpp  json_reader.hpp  process.hpp
builder/include/model/: loader.hpp  specs.hpp
builder/src/: main.cpp
builder/src/commands/: build_command.cpp  clean_command.cpp  list_command.cpp  module_command.cpp  serve_command.cpp
builder/src/io/: fs_utils.cpp  http_server.cpp  json_reader.cpp  process.cpp
builder/src/model/: loader.cpp
builder/tests/: module_command_tests.cpp  path_tests.cpp  process_tests.cpp  web_tests.cpp
export/angrybirds/android/: angrybirds.signed.apk.idsig
export/angrybirds/android/_build/: AndroidManifest.xml
export/angrybirds/web/: index.html  runner.js
export/candycrash/web/: runner.js
export/candycrash/web/assets/: main.buc
export/freez/web/: freez.js  index.html
export/freez/web/assets/: main.buc
export/piano/android/: piano.signed.aab  release.json
export/piano/android/_build/: AndroidManifest.xml
export/piano/web/: release.json
export/piano_signing_env/android/: piano_signing_env.signed.apk.idsig  release.json
ide_utils/: __init__.py  android_native_build.py  android_pipeline.py  fs_utils.py  native_build.py  process_utils.py  toolchain.py
modules/box2d/: module.json
modules/bu/: .gitignore  CMakeLists.txt  module.json
modules/bu/include/: RuntimeDebugger.hpp  compiler.hpp  config.hpp  debug.hpp  interpreter.hpp  lexer.hpp  list.hpp  map.hpp  opcode.hpp  ordermap.hpp  pool.hpp  set.hpp  string.hpp  token.hpp  types.hpp  value.hpp  vector.hpp
modules/bu/src/: builtins_array.cpp  builtins_base.cpp  builtins_file.cpp  builtins_fs.cpp  builtins_json.cpp  builtins_math.cpp  builtins_net.cpp  builtins_os.cpp  builtins_path.cpp  builtins_regex.cpp  builtins_time.cpp  bytecode_loader.cpp  code.cpp  compiler.cpp  compiler_expressions.cpp  compiler_statements.cpp  debug.cpp  gc.cpp  interpreter.cpp  interpreter_process.cpp  interpreter_runtime_goto.cpp  interpreter_runtime_switch.cpp  lexer.cpp  module.cpp  plugin.cpp  pool.cpp  token.cpp  value.cpp
modules/gme/: module.json
modules/gme/include/gme/: gme.h
modules/graphics/: CMakeLists.txt  module.json
modules/graphics/src/: collision.cpp  div.h  engine.cpp  engine.hpp  entity.cpp  filebuffer.cpp  graph.cpp  math.cpp  math.hpp  render.cpp  render.hpp  scene.cpp  sound.cpp
modules/gtest/: module.json
modules/gtest/src/: gtest_all_wrapper.cpp
modules/miniz/: module.json
modules/mpg123/: module.json
modules/mpg123/include/linux/: config.h
modules/opengl/: module.json
modules/opengl/include/: opengl.h
modules/opengl/src/: opengl.c
modules/opus/: module.json
modules/png/: module.json
modules/png/include/: config.h
modules/raylib/: module.json  shell.html
modules/raylib/include/: config.h
modules/raylib/src/: shell.html
modules/sdl2/: Android.mk  module.json
modules/sdl2/include/: SDL_config.h  SDL_config_linux.h
modules/sdl2_image/: module.json
modules/sdl2_mixer/: module.json
modules/sfml/: module.json
modules/stb-image/src/: stb_image_write.c
modules/tremor/: module.json
modules/webp/: module.json
modules/xmp/: module.json
packager/: Makefile  context.hpp  fs_utils.cpp  fs_utils.hpp  main.cpp  packager  process.cpp  process.hpp
projects/bugame/: default.json  flappy_best_genome.json  main  main.mk  pong_best_genome.json  shell.html
projects/bugame/releases/: README.md  angrybirds.json  candycrash.json  noid.json  rects.json  survive.json
projects/bugame/scripts/: ai_runner_template.bu  ai_train_template.bu  angrybird.bu  app_core.bu  arena_rogue.bu  arkanoid.bu  box2d_angry_birds_demo.bu  box2d_angry_birds_demo_bk.bu  box2d_car_demo.bu  box2d_distance_joint_demo.bu  box2d_drop_demo.bu  box2d_flipper_demo.bu  box2d_friction_joint_demo.bu  box2d_gear_joint_demo.bu  box2d_motor_joint_demo.bu  box2d_mouse_joint.bu  box2d_poly2tri_test.bu  box2d_prismatic_joint_demo.bu  box2d_pulley_joint_demo.bu  box2d_rope_demo.bu  bunny.bu  bunnymark.bu  bunnys.py  candicrash.bu  candicrash_2.bu  candicrash_3.bu  candy.bu  car_physics_bounce.bu  controllers.bu  dead_rails_chaos.bu  debug_inspector.bu  demo_dpad.bu  demo_joystick.bu  demo_screens.bu  dpad_joystick.bu  fast_and_chaos.bu  fast_and_chaos_advanced.bu  flappy_ai_demo.bu  galax.bu  game.bu  (+38 more)
projects/bugame/src/: bindings.cpp  bindings.hpp  box2d.cpp  box2d_joints.cpp  box2d_joints.hpp  camera.cpp  camera.hpp  draw.cpp  ease.cpp  image.cpp  input.cpp  main.cpp  message.cpp  particles.cpp  poly2tri_binding.cpp  process.cpp  renderer.cpp  renderer.hpp  sound.cpp  sound.hpp
projects/burepl/: burepl  main.mk
projects/burepl/src/: main.cpp
projects/runner/: CMakeLists.txt  default.json  main.mk  runner
projects/runner/releases/: freez.json
projects/sdl/: tutorial_1  tutorial_1.cpp  tutorial_1_test
projects/sfml/tennis/: Tennis
projects/sfml/window/: Window  Window.cpp
releases/: README.md  STEPS.md  chaos.json  freez.json  galax.json  hillclimb.json  winters.json
releases/angrybirds/assets/: main.buc
releases/candycrash/scripts/: main.bu
releases/freez/: script.txt
releases/freez/scripts/: main.bu
releases/noid/assets/: main.buc
releases/noid/scrips/: main.bu
releases/piano/: AndroidManifest.xml
releases/piano/keys/: piano-upload.jks
releases/piano/scripts/: main.bu
releases/rects/scripts/: main.bu
releases/survive/scripts/: stages.bu  tween.bu
releases/winters/assets/: main.buc
submit/freez_web/: freez.js
tmp/: build  clean  list
tools/: fetch_third_party_release.py  generate_gitignore.py  pack_runner_release.py  packager.py  test_codecs.sh  third_party_releases.json
tools/dpad_joystick_lib/: README.md
(+85 files in other folders)
